--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,77 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+/*qiando lo schermo è quello di un telefono tablet desktop and(e la)grandezza max o min (massima )  o  (minima) e nelle graffe la nuova regola*/
+/************************************************
+    RESPONSIVE DESIGN
+ ************************************************/
+
+
+@media screen and (max-width: 768px) {
+
+    .container{
+        width: 90%;
+       
+       
+    }
+
+    .row{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+
+    }
+
+    .col{
+        width: 100%;
+        padding: 0;
+        margin: 0 auto;
+        display: flex;
+        text-align: left;
+    }
+
+  
+
+}
+
+@media screen and (max-width: 400px) {
+
+    .container{
+        width: 80%;
+       
+    }
+
+    .row{
+        display: flex;
+        flex-direction: column;
+        
+    }
+
+    img{
+        width: 100%;
+    }
+
+    .steps{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .col{
+        width: 100%;
+        padding: 0;
+        margin: 0 auto;
+        display: flex;
+        text-align: left;
+    }
+
+
+
+}
+
+
+
+
+
+
+
